css/main.css
@import "normalize.css";

/* ----- INDEX ----- */

* {
    font-family: marvin-round, sans-serif;
    font-weight: 400;
    font-style: normal;
    scroll-behavior: smooth;
    letter-spacing: .05rem;
}

a:link, a:visited, a:hover, a:active  {
    text-decoration: none;
}

/* Color Variables */

:root {
    --h1: #d16b74;
    --h2: #C12020;
    --dark: #212121;
    --accent1: #F54F50;

    --pink: rgb(255, 93, 93);
    --orange: rgb(255, 102, 67);
    --orange2: rgb(255, 142, 49);
    --yellow: rgb(255, 218, 68);
    --green: rgb(145, 255, 89);
    --teal: rgb(0, 255, 208);
    --blue: rgb(66, 81, 254);
    --purple: rgb(124, 0, 249);
    --purple2: rgb(186, 47, 255);

    --red2: rgb(197, 6, 6);
    --green2: rgb(53, 212, 159);
    --blue2: rgb(0, 131, 245);

    --tab-active: #202020;
    --tab-back: rgba(0, 0, 0, 0.452);
    --tab-text: white;
    --background: rgb(103, 175, 96);;
}

body {
    background-image: linear-gradient(var(--pink), var(--yellow), var(--teal), var(--purple2), var(--teal), var(--yellow), var(--pink));
    margin: 0 auto;
    max-width: 1200px;
}
.logo {
    display: flex;
    justify-content: center;
    margin: .75rem 0;
}

.logocoloring {
    width: 100%;
    max-width: 80px;
    margin-left: .5rem;
}

.logoindex {
    width: 100%;
    max-width: 100px;
}

h1 {
    color: var(--accent1);
}

/* Home Gallery Grid */

.image-grid {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
}

.thumbnails {
    width: 50%;
    padding: .5rem;
}

.thumbnails img:hover, .thumbnails svg:hover {
    transform: scale(1.05);
}

.thumbnails * {
    box-shadow: 4px 4px 4px 3px #00000046;
    border-radius: 5px;
}

.image-grid.user-created svg {
    width: auto;
    height: auto;
}

@keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

footer, .back-to-top {
    width: 100%;
    display: flex;
    justify-content: center;
}

.b2t {
    width: 5rem;
    padding-bottom: 1.5rem;
}

.upload-success {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: white;
    padding: 2rem;
    border-radius: 10px;
}

.upload-success h1 {
    margin: 0;
}

.upload-success p {
    margin: 1rem 0;
}

.upload-success button {
    color: var(--red2);
}

.upload-success p {
    color: black;
}

/* Home Hovers */

.b2t, .thumbnails *, .item, .stack, button {
    transition: all .2s ease-in-out;
    -webkit-transition: all .2s ease-in-out;
}

button:hover, .item:hover {
    cursor: pointer;
}

.b2t:hover {
    transform: scale(1.1);
}

.upload-success button:hover {
    color: #505050;
}

/* Home tabs */
.tabs {
    display: flex;
}
.tab {
    color: var(--tab-text);
    background-color:var(--tab-back);
    width: 50vw;
    text-align: center;
    padding: .75rem;
    font-size: .75rem;
    max-width: 600px;
}
.tab p:hover {
    transform: scale(1.1);
}
.tab p {
    transition: all .2s ease-in-out;  
}
.activetab {
    background-color:var(--tab-active);
}
.image-grid {
    background-color:var(--tab-active);
    padding: 1rem .5rem;
}
footer {
    background-color:var(--tab-active);
}

/* Home Media Queries */

@media only screen and (min-width: 525px) {
    .thumbnails {
        width: calc(100% / 3);
    }
}

@media only screen and (min-width: 1000px) {
    .thumbnails {
        width: calc(100% / 4);
    }
}

/* Media Queries */

@media only screen and (min-width: 550px) {
    .logoindex {
        max-width: 150px;
    }
    .logocoloring {
        max-width: 100px;
        padding-top: .5rem;
    }
    #logo {
        padding-left: 1rem;
    }
    .commands {
        margin: .25rem;
    }
    .canvas-buttons img {
        margin: 0 .25rem;
    }
}


/* ----- COLORING PAGE ----- */

* {
    color: white;
}

.coloring-page {
    padding: 0;
    margin: 0 auto;
    max-width: 1200px;
}
main {
    display: flex;
    flex-direction: column;
}

#colorpage {
    /* max-width: 500px;
    margin: 1rem auto;
    border: 8px solid white;
    border-radius: 10px;
    background-color: white;
    box-shadow: 0 0 7px 5px #00000046; */
    width: 100%;
    height: 100%;
    padding: .5rem;
    display: flex;
    max-width: 1000px;
    margin: 0 auto;
}

.aside {
    background-color: #202020;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-evenly;
    border-radius: 0 0 5px 5px;
}

#top-aside {
    justify-content: space-between;
    border-radius: 5px 5px 0 0;
}

.main-area {
    display: flex;
    justify-content: center;
    align-items: center;
    height: auto;
    background-color: #e7e7e7;
}

.main-area svg {
    width: 100%;
    height: auto;
    max-width: 30rem;
}

.commands {
    width: 100%;
    display: grid;
    grid-template-columns: .5fr 1fr;
    grid-template-rows: 1fr;
    align-items: center;
    padding: .5rem .25rem;
}

.credit {
    justify-self: flex-end;
    font-size: .75rem;
}

.canvas-buttons {
    display: flex;
}

.canvas-buttons img {
    width: 1.5rem;
    height: 1.5rem;
}

.item {
    width: 2rem;
    height: 2rem;
    margin: .25rem;
}

.swatches {
    overflow-x: scroll;
    overflow-y: hidden;
    white-space: nowrap;
    display: flex;
    width: 100%;
    padding: .25rem;
    justify-content: center;
}
.swatches-inner {
    display: inline-block;
}

.swatches-inner div {
    display:inline-block;
}

.swatch {
    border-radius: 50%;
    border: #00000000 solid .1rem;
}

.svg {
    width: 100%;
    height: 100%;
}

svg {
    width: 1.5rem;
    height: 1.5rem;
}

.stack {
    border: none;
    border-radius: 50%;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 231.36 231.36'%3E%3Cdefs/%3E%3Cg data-name='Layer 2'%3E%3Cg data-name='Layer 1'%3E%3Cpath fill='%23f47c20' d='M197.69 34.1a115.32 115.32 0 00-82-34.1v116.11z'/%3E%3Cpath fill='%23fdce0a' d='M197.69 34.1l-82 82h115.66v-.43a115.3 115.3 0 00-33.66-81.57z'/%3E%3Cpath fill='%2365af45' d='M197.26 197.69a115.28 115.28 0 0034.09-81.58H115.68z'/%3E%3Cpath fill='%23029695' d='M115.68 231.36a115.3 115.3 0 0081.58-33.67l-81.58-81.58z'/%3E%3Cpath fill='%234f61ac' d='M34.1 197.69a115.3 115.3 0 0081.58 33.67V116.11z'/%3E%3Cpath fill='%236b449b' d='M0 116.11a115.28 115.28 0 0034.1 81.58l81.58-81.58z'/%3E%3Cpath fill='%23a43393' d='M33.67 34.1A115.3 115.3 0 000 115.68v.43h115.68z'/%3E%3Cpath fill='%23e12526' d='M115.68 0a115.32 115.32 0 00-82 34.1l82 82z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
    height: 2rem;
    width: 2rem;
}

.active {
    border: white solid .1rem;
}

/* Hovers */

[data-command]:hover {
    background-color: #585858;
}

.swatch:hover, .stack:hover {
    border: white solid .1rem;
}

.main-area svg:hover {
    cursor: url("../../graphics/fill.png"), crosshair;
}

/* UPLOAD SCREEN */

.modal {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding: 1rem;
    background-color: #00000085;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.upload-screen * {
    color: black;
}

.upload-screen {
    background-color: white;
    padding: 1rem;
    border-radius: 10px;
    width: 100%;
    max-width: 500px;
}

.upload-screen svg {
    width: 100%;
    height: auto;
    border-radius: 10px;
}

.upload-screen input {
    color: black;
}

.upload-modal.closed {
    display: none;
}

.upload-modal.opened {
    display: flex;
}

#upload-form {
    display: flex;
    flex-direction: column;
}

.upload-modal * {
    margin: .25rem 0;
}

input, button {
    width: 100%;
    min-height: fit-content;
    border: none;
    border-radius: 10px;
    padding: .5rem 1rem;
}

.half {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

input {
    background-color: #e8e8e8;
    color: black;
}

button {
    color: white;
    width: 46%;
}

/* Stop Autofill Re-Style */
input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus, 
input:-webkit-autofill:active  {
    -webkit-box-shadow: 0 0 0 30px var(--tertiary-black) unset;
}

input:-webkit-autofill {
    -webkit-text-fill-color: black;
}

button[name="submit"] {
    background-color: var(--green2);
    border: 2px var(--green2) solid !important;
}

button[type="reset"] {
    background-color: var(--red2);
    border: 2px var(--red2) solid !important;
}

button[name="submit"]:hover {
    background-color: #00000000;
    color: var(--green2) !important;
}

button[type="reset"]:hover {
    background-color: #00000000;
    color: var(--red2) !important;
}

/* Color picker */

.colorPicker {
    width: 280px;
    height: 280px;
    margin: auto calc(50% - (280px/2));
    position: fixed;
    bottom: -50%;
    left: 0;
    border-radius: 50%;
    /* display: none !important; */
}

svg.IroSlider {
    display: none !important;
}

.picker-close {
    background-color: #fff;
    width: 2rem;
    height: 2rem;
    border-radius: 50%;
    position: absolute;
    right: 0;
    padding: 0.5rem .85rem;
    transform: rotate(45deg);
    box-shadow: 0 0 7px 5px #00000025;
}

.picker-close:hover {
    transform: rotate(45deg) scale(1.15);
}

.picker-close .x {
    width: .25rem;
    height: 1rem;
    background-color: #000;
    position: absolute;
}

.x:first-of-type {
    transform: rotate(90deg);
}

.swatches *, .item.picker-reflect.active {
    transition: all .2s ease-in-out;
    -webkit-transition: all .2s ease-in-out;
}

.picker-reflect {
    background-color: white;
    border-radius: 50%;
}

.hide {
    display: none !important;
}

.move-up {
    bottom: 10% !important;
}

.squish {
    transform: translateX(-3rem) scale(0);
    width: 0;
    margin: 0;
    z-index: 0;
}

